It will.. added final img, un-able to fix aligning and spacing issues, thoroughly frustrated mentally exhausted

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 #title {
-  color: grey;
+  color: #708090;
 }
 
 .column1 {
